[tool.poetry]
name = "planetarium"
version = "0.1.0"
description = "A playground of planetary imaging tools"
authors = ["Aman Chokshi <achokshi@student.unimelb.edu.au>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/amanchokshi/planetarium"
repository = "https://github.com/amanchokshi/planetarium"
keywords = ["planetarium"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
tifffile = "^2020.11.18"
numpy = "^1.19.4"
scipy = "^1.5.4"
astropy = "^4.2"
matplotlib = "^3.3.3"
skyfield = "^1.33"

[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
